Fix: Contact us form > info icon in captcha. || Cookies dialog > home, footer > background scroll stopped. || Home page > our-products section visibility issue fixed. || Partner page > spell correction. || Privacy, and Terms page > commented 'blogs' link in mobile view.

--- a/infinnium_website.client/src/auth/Contact Us/form/form.component.css
+++ b/infinnium_website.client/src/auth/Contact Us/form/form.component.css
@@ -54,7 +54,7 @@
   background-color: #ccc;
   color: black;
   border-radius: 50%;
-  font-size: 10px;
+  font-size: 8px;
   width: 18px;
   height: 18px;
   text-align: center;
